--- a/pymaceuticals.ipynb
+++ b/pymaceuticals.ipynb
@@ -219,23 +219,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-82-a4d687d419c0>, line 2)",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-82-a4d687d419c0>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    See Above Cells\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
-    "See Above Cells \n",
+    "#See Above Cells \n",
     "# This method produces everything in a single groupby function\n",
-    "See Above Cells "
+    "#See Above Cells "
    ]
   },
   {
@@ -619,7 +610,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.6.10-final"
   }
  },
  "nbformat": 4,
